--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -1,1 +1,13 @@
 /* Layout */
+
+body {
+	background: @colorfondo;
+	font-family: @mainfont;
+	font-size: 16px;
+	color: @textoarticle;
+}
+::selection {
+	background: orange;
+	color: white;
+}
+
