--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -1,5 +1,31 @@
 // Variables
 
-// Tipografias
+// Tipografias =====================================
 @mainfont: 'pt sans', sans-serif;
 @titulofont: 'Quicksand', sans-serif;
+
+// Break points ====================================
+
+// Colores =========================================
+// Color primario
+@colorfondo: rgb(237,241,243);
+
+// Color fuentes
+// Menu titulo
+@menutitulo: rgb(144,156,172);
+// Menu texto
+@menutexto: rgb(88,88,88);
+
+// Titulo article
+@tituloarticle: rgb(106,116,126);
+// Subtitulo article
+@subtituloarticle: rgb(83,92,100);
+// Texto article
+@textoarticle: rgb(111,129,148);
+
+// Texto terminal
+@textoterminal: rgb(83,92,100);
+
+// Fuentes =========================================
+@mainfont: 'pt sans', sans-serif;
+@titulo: 'Quicksand', sans-serif;
