--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -4,10 +4,21 @@ body {
 	background: @colorfondo;
 	font-family: @mainfont;
 	font-size: 16px;
-	color: @textoarticle;
+	color: @colorprincipal;
 }
 ::selection {
 	background: orange;
 	color: white;
 }
+#contenedor {
+	margin: 0 auto;
+	max-width: 1130px;
+}
+#menu {
 
+}
+#home {
+	display: block;
+	float: left;
+	width: 825px;
+}
