--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -7,10 +7,9 @@
 // Break points ====================================
 
 // Colores =========================================
-// Color primario
+// Color fondo
 @colorfondo: rgb(237,241,243);
 
-// Color fuentes
 // Menu titulo
 @menutitulo: rgb(144,156,172);
 // Menu texto
@@ -21,7 +20,7 @@
 // Subtitulo article
 @subtituloarticle: rgb(83,92,100);
 // Texto article
-@textoarticle: rgb(111,129,148);
+@colorprincipal: rgb(111,129,148);
 
 // Texto terminal
 @textoterminal: rgb(83,92,100);
