definida estructura semántica de los articles y empezando a usar sistema de grids de bootstrap

--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -99,6 +99,8 @@ body {
   max-width: 1130px;
 }
 #home {
+  background: white;
+  border-radius: 4px;
   display: block;
   float: left;
   width: 825px;
