--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -15,9 +15,10 @@ body {
 	max-width: 1130px;
 }
 #menu {
-
 }
 #home {
+	background: white;
+	border-radius: 4px;
 	display: block;
 	float: left;
 	width: 825px;
