--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -119,9 +119,6 @@ body {
   color: white;
 }
 @media screen and (min-width: 992px) {
-  body {
-    background: red;
-  }
   #contenedor {
     margin: 0 auto;
     max-width: 1130px;
@@ -147,5 +144,24 @@ body {
   }
 }
 @media screen and (max-width: 992px) {
-  
+  header {
+    text-align: center;
+    padding: 10px 0;
+  }
+  #header h1 {
+    font-family: helvetica;
+    font-size: 4.3em;
+    letter-spacing: -3px;
+    line-height: .8;
+  }
+  #header h2 {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1.2em;
+    letter-spacing: -2px;
+  }
+  #logo img {
+    width: 60px;
+    height: 60px;
+    padding: 5px 0 0 7px;
+  }
 }
