añadido tercer break point

--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -1,26 +1,22 @@
 // Break point 2
 
-
-#contenedor {
-	margin: 0 auto;
-	max-width: 1130px;
+header {
+	text-align: center;
+	padding: 10px 0;
 }
-#home {
-	background: white;
-	border-radius: 4px;
-	display: block;
-	float: left;
-	width: 825px;
+#header h1 {
+	font-family: @titulofont;
+	font-size: 4.3em;
+	letter-spacing: -8px;
+	line-height: .8;
 }
-.row .col-md-4 #menu ul li {
-	color: @menutexto;
+#header h2 {
+	font-family: @titulofont;
+	font-size: 1.2em;
+	letter-spacing: -2px;
 }
-.row .col-md-4 #menu li#titulo {
-	color: @menutitulo;
-	font-weight: bold;
-	margin: 12px 0 0 0;
-}
-.row .col-md-4 #menu li#titulo li{
-	font-weight: normal;
-	margin: 0 0 0 30px;
+#logo img {
+	width: 60px;
+	height: 60px;
+	padding: 5px 0 0 7px;
 }
