--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -91,67 +91,19 @@ body {
   font-size: 16px;
   line-height: 1.9;
 }
-#contenedor {
-  margin: 0 auto;
-  max-width: 1130px;
-}
-#home {
-  background: white;
-  border-radius: 4px;
-  display: block;
-  float: left;
-  width: 825px;
-}
-.row .col-md-4 #menu ul li {
-  color: #585858;
-}
-.row .col-md-4 #menu li#titulo {
-  color: #909cac;
-  font-weight: bold;
-  margin: 12px 0 0 0;
-}
-.row .col-md-4 #menu li#titulo li {
-  font-weight: normal;
-  margin: 0 0 0 30px;
-}
 ::selection {
   background: orange;
   color: white;
 }
 @media screen and (min-width: 992px) {
-  #contenedor {
-    margin: 0 auto;
-    max-width: 1130px;
-  }
-  #home {
-    background: white;
-    border-radius: 4px;
-    display: block;
-    float: left;
-    width: 825px;
-  }
-  .row .col-md-4 #menu ul li {
-    color: #585858;
-  }
-  .row .col-md-4 #menu li#titulo {
-    color: #909cac;
-    font-weight: bold;
-    margin: 12px 0 0 0;
-  }
-  .row .col-md-4 #menu li#titulo li {
-    font-weight: normal;
-    margin: 0 0 0 30px;
-  }
-}
-@media screen and (max-width: 992px) {
   header {
     text-align: center;
     padding: 10px 0;
   }
   #header h1 {
-    font-family: helvetica;
+    font-family: 'Quicksand', sans-serif;
     font-size: 4.3em;
-    letter-spacing: -3px;
+    letter-spacing: -8px;
     line-height: .8;
   }
   #header h2 {
@@ -164,4 +116,29 @@ body {
     height: 60px;
     padding: 5px 0 0 7px;
   }
+}
+@media screen and (max-width: 992px) {
+  header {
+    text-align: center;
+    padding: 10px 0;
+  }
+  #header h1 {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 4.3em;
+    letter-spacing: -8px;
+    line-height: .8;
+  }
+  #header h2 {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 1.2em;
+    letter-spacing: -2px;
+  }
+  #logo img {
+    width: 60px;
+    height: 60px;
+    padding: 5px 0 0 7px;
+  }
+}
+@media screen and (max-width: 480px) {
+  
 }
