--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -1,13 +1,13 @@
-// Break point 2
+// Break point 1
 
 header {
 	text-align: center;
 	padding: 10px 0;
 }
 #header h1 {
-	font-family: helvetica;
+	font-family: @titulofont;
 	font-size: 4.3em;
-	letter-spacing: -3px;
+	letter-spacing: -8px;
 	line-height: .8;
 }
 #header h2 {
