--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -7,29 +7,7 @@ body {
 	font-size: 16px;
 	line-height: 1.9;
 }
-#contenedor {
-	margin: 0 auto;
-	max-width: 1130px;
-}
-#home {
-	background: white;
-	border-radius: 4px;
-	display: block;
-	float: left;
-	width: 825px;
-}
-.row .col-md-4 #menu ul li {
-	color: @menutexto;
-}
-.row .col-md-4 #menu li#titulo {
-	color: @menutitulo;
-	font-weight: bold;
-	margin: 12px 0 0 0;
-}
-.row .col-md-4 #menu li#titulo li{
-	font-weight: normal;
-	margin: 0 0 0 30px;
-}
+
 ::selection {
 	background: orange;
 	color: white;
@@ -41,5 +19,9 @@ body {
 }
 
 @media screen and (max-width: 992px) {
+	@import "bp1.less";
+}
+
+@media screen and (max-width: 480px) {
 	@import "bp1.less";
 }
