--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -121,11 +121,16 @@ body {
   header {
     text-align: center;
     padding: 10px 0;
+    background: rgba(0, 0, 0, 0.05);
+  }
+  figure {
+    width: 30%;
+    float: left;
   }
   #header h1 {
     font-family: 'Quicksand', sans-serif;
-    font-size: 4.3em;
-    letter-spacing: -8px;
+    font-size: 3.3em;
+    letter-spacing: -5px;
     line-height: .8;
   }
   #header h2 {
@@ -134,9 +139,10 @@ body {
     letter-spacing: -2px;
   }
   #logo img {
-    width: 60px;
-    height: 60px;
-    padding: 5px 0 0 7px;
+    width: 53px;
+    height: 53px;
+    position: relative;
+    left: 0px;
   }
 }
 @media screen and (max-width: 480px) {
