--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -3,11 +3,16 @@
 header {
 	text-align: center;
 	padding: 10px 0;
+	background: rgba(0,0,0,.05);
+}
+figure {
+	width: 30%;
+	float: left;
 }
 #header h1 {
 	font-family: @titulofont;
-	font-size: 4.3em;
-	letter-spacing: -8px;
+	font-size: 3.3em;
+	letter-spacing: -5px;
 	line-height: .8;
 }
 #header h2 {
@@ -16,7 +21,8 @@ header {
 	letter-spacing: -2px;
 }
 #logo img {
-	width: 60px;
-	height: 60px;
-	padding: 5px 0 0 7px;
+	width: 53px;
+	height: 53px;
+	position: relative;
+	left: 0px;
 }
