estilado header en bp1 y 2

--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -1,28 +1,19 @@
 // Break point 1
 
 header {
-	text-align: center;
-	padding: 10px 0;
 	background: rgba(0,0,0,.05);
+	padding: 0 0 10px 0;
 }
-figure {
-	width: 30%;
-	float: left;
+#logo {
+	text-align: center;
 }
-#header h1 {
-	font-family: @titulofont;
-	font-size: 3.3em;
-	letter-spacing: -5px;
-	line-height: .8;
-}
-#header h2 {
-	font-family: @titulofont;
-	font-size: 1.2em;
-	letter-spacing: -2px;
+#logo h1 {
+	font-size: 3em;
 }
 #logo img {
-	width: 53px;
-	height: 53px;
-	position: relative;
-	left: 0px;
+	display: block;
+	margin: 0 auto;
+	height: auto;
+	padding-top: 10px;
+	width: 60px;
 }
