--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -1,22 +1,9 @@
 // Break point 2
 
-header {
+#logo {
 	text-align: center;
-	padding: 10px 0;
-}
-#header h1 {
-	font-family: @titulofont;
-	font-size: 4.3em;
-	letter-spacing: -8px;
-	line-height: .8;
-}
-#header h2 {
-	font-family: @titulofont;
-	font-size: 1.2em;
-	letter-spacing: -2px;
 }
 #logo img {
-	width: 60px;
-	height: 60px;
-	padding: 5px 0 0 7px;
+	width: 80px;
+	height: auto;
 }
