--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -7,7 +7,9 @@ body {
 	font-size: 16px;
 	line-height: 1.9;
 }
-
+#logo h1,h2 {
+	font-family: @tituloprincipal;
+}
 ::selection {
 	background: orange;
 	color: white;
