--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -26,5 +26,6 @@
 @textoterminal: rgb(83,92,100);
 
 // Fuentes =========================================
-@mainfont: 'pt sans', sans-serif;
-@titulo: 'Quicksand', sans-serif;
+@mainfont: 'Raleway', sans-serif;
+@tituloprincipal: 'lobster', cursive; 
+@tituloarticulo: 'Quicksand', cursive; 
