--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -87,62 +87,44 @@ a {
 body {
   background: #edf1f3;
   color: #6f8194;
-  font-family: 'pt sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
   line-height: 1.9;
+}
+#logo h1,
+h2 {
+  font-family: 'lobster', cursive;
 }
 ::selection {
   background: orange;
   color: white;
 }
 @media screen and (min-width: 992px) {
-  header {
+  #logo {
     text-align: center;
-    padding: 10px 0;
-  }
-  #header h1 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 4.3em;
-    letter-spacing: -8px;
-    line-height: .8;
-  }
-  #header h2 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 1.2em;
-    letter-spacing: -2px;
   }
   #logo img {
-    width: 60px;
-    height: 60px;
-    padding: 5px 0 0 7px;
+    width: 80px;
+    height: auto;
   }
 }
 @media screen and (max-width: 992px) {
   header {
-    text-align: center;
-    padding: 10px 0;
     background: rgba(0, 0, 0, 0.05);
+    padding: 0 0 10px 0;
   }
-  figure {
-    width: 30%;
-    float: left;
+  #logo {
+    text-align: center;
   }
-  #header h1 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 3.3em;
-    letter-spacing: -5px;
-    line-height: .8;
-  }
-  #header h2 {
-    font-family: 'Quicksand', sans-serif;
-    font-size: 1.2em;
-    letter-spacing: -2px;
+  #logo h1 {
+    font-size: 3em;
   }
   #logo img {
-    width: 53px;
-    height: 53px;
-    position: relative;
-    left: 0px;
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    padding-top: 10px;
+    width: 60px;
   }
 }
 @media screen and (max-width: 480px) {
