--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -17,3 +17,14 @@ header {
 	padding-top: 10px;
 	width: 60px;
 }
+#menu {
+	padding: 20px 0 10px 0;
+}
+#mm0 {
+	width: 100%;
+	background: transparent;
+	border: 1px solid @colorprincipal;
+	color: grey;
+	font-size: 18px;
+	height: 38px;
+}
