--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -111,7 +111,7 @@ h2 {
 @media screen and (max-width: 992px) {
   header {
     background: rgba(0, 0, 0, 0.05);
-    padding: 0 0 10px 0;
+    margin-bottom: 15px;
   }
   #logo {
     text-align: center;
@@ -127,15 +127,17 @@ h2 {
     width: 60px;
   }
   #menu {
-    padding: 20px 0 10px 0;
+    padding: 20px 0 0 0;
   }
   #mm0 {
-    width: 100%;
-    background: transparent;
+    background: #6f8194;
     border: 1px solid #6f8194;
-    color: grey;
+    color: #edf1f3;
     font-size: 18px;
     height: 38px;
+    left: -4px;
+    position: relative;
+    width: 105%;
   }
 }
 @media screen and (max-width: 480px) {
