--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -2,7 +2,7 @@
 
 header {
 	background: rgba(0,0,0,.05);
-	padding: 0 0 10px 0;
+	margin-bottom: 15px;
 }
 #logo {
 	text-align: center;
@@ -18,13 +18,15 @@ header {
 	width: 60px;
 }
 #menu {
-	padding: 20px 0 10px 0;
+	padding: 20px 0 0 0;
 }
 #mm0 {
-	width: 100%;
-	background: transparent;
+	background: @colorprincipal;
 	border: 1px solid @colorprincipal;
-	color: grey;
+	color: @colorfondo;
 	font-size: 18px;
 	height: 38px;
+	left: -4px;
+	position: relative;
+	width: 105%;
 }
