--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -100,18 +100,12 @@ h2 {
   color: white;
 }
 @media screen and (min-width: 992px) {
-  #logo {
-    text-align: center;
-  }
-  #logo img {
-    width: 80px;
-    height: auto;
-  }
+  
 }
 @media screen and (max-width: 992px) {
   header {
     background: rgba(0, 0, 0, 0.05);
-    margin-bottom: 15px;
+    margin-bottom: 12px;
   }
   #logo {
     text-align: center;
@@ -123,7 +117,7 @@ h2 {
     display: block;
     margin: 0 auto;
     height: auto;
-    padding-top: 10px;
+    padding: 10px 0 3px 0;
     width: 60px;
   }
   #menu {
@@ -139,7 +133,4 @@ h2 {
     position: relative;
     width: 105%;
   }
-}
-@media screen and (max-width: 480px) {
-  
 }
