--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -2,7 +2,7 @@
 
 header {
 	background: rgba(0,0,0,.05);
-	margin-bottom: 15px;
+	margin-bottom: 12px;
 }
 #logo {
 	text-align: center;
@@ -14,7 +14,7 @@ header {
 	display: block;
 	margin: 0 auto;
 	height: auto;
-	padding-top: 10px;
+	padding: 10px 0 3px 0;
 	width: 60px;
 }
 #menu {
