--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -2,7 +2,40 @@
 
 header {
 	background: rgba(0,0,0,.05);
-	margin-bottom: 12px;
+}
+#empezando {
+	background: white;
+	padding: 20px 5px;
+}
+#empezando h1 {
+	color: @tituloarticle;
+	font-family: @tituloarticulo;
+	font-size: 2.5em;
+	letter-spacing: -4px;
+	text-align: center;
+	padding: 0 0 20px 0;
+}
+#empezando h2 {
+	color: @subtituloarticle;
+	font-family: @mainfont;
+	font-size: 1.4em;
+	padding: 0 0 7px 0;
+}
+#empezando p {
+	color: @colorprincipal;
+	font-size: 1em;
+	padding: 0 0 0 10px;
+}
+#empezando pre {
+	background: rgba(0,0,0,.65);
+	margin: 35px 0 10px 0;
+	position: relative;
+}
+#empezando pre span {
+	color: @textoterminal;
+	position: absolute;
+	top: 18px;
+	left: 10px;
 }
 #logo {
 	text-align: center;
@@ -29,4 +62,19 @@ header {
 	left: -4px;
 	position: relative;
 	width: 105%;
+}
+.ventana_ternminal {
+	background: lightgrey;
+	border-radius: 4px 4px 0 0;
+	height: 23px;
+	left: 0px;
+	position: absolute;
+	top: -20px;
+	width: 100%;
+}
+.terminal {
+	position: absolute;
+	top: 2px;
+	left: 37%;
+	font-size: .9em;
 }
