de nuevo hay 3 break points

--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -1,2 +1,77 @@
-// Break point 3
+// Break point 2
 
+#empezando {
+	background: white;
+	padding: 20px 5px;
+}
+#empezando h1 {
+	color: @tituloarticle;
+	font-family: @tituloarticulo;
+	font-size: 2.5em;
+	letter-spacing: -4px;
+	text-align: center;
+	padding: 0 0 20px 0;
+}
+#empezando h2 {
+	color: @subtituloarticle;
+	font-family: @mainfont;
+	font-size: 1.4em;
+	padding: 0 0 7px 0;
+}
+#empezando p {
+	color: @colorprincipal;
+	font-size: 1em;
+	padding: 0 0 0 10px;
+}
+#empezando pre {
+	background: rgba(0,0,0,.65);
+	margin: 35px 0 10px 0;
+	position: relative;
+}
+#empezando pre span {
+	color: @textoterminal;
+	position: absolute;
+	top: 18px;
+	left: 10px;
+}
+#logo {
+	text-align: center;
+}
+#logo h1 {
+	font-size: 3em;
+}
+#logo img {
+	display: block;
+	margin: 0 auto;
+	height: auto;
+	padding: 10px 0 3px 0;
+	width: 60px;
+}
+#menu {
+	padding: 20px 0 0 0;
+}
+#mm0 {
+	background: @colorprincipal;
+	border: 1px solid @colorprincipal;
+	color: @colorfondo;
+	font-size: 18px;
+	height: 38px;
+	left: -4px;
+	position: relative;
+	width: 105%;
+}
+.ventana_ternminal {
+	background: lightgrey;
+	border-radius: 4px 4px 0 0;
+	height: 23px;
+	left: 0px;
+	position: absolute;
+	top: -20px;
+	width: 100%;
+}
+.terminal {
+	position: absolute;
+	top: 2px;
+	left: 45%;
+	font-size: .9em;
+}
