--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -17,9 +17,13 @@ body {
 
 // Break points
 @media screen and (min-width: 992px) {
-	@import "bp2.less";
+	@import "bp3.less";
 }
 
 @media screen and (max-width: 992px) {
+	@import "bp2.less";
+}
+
+@media screen and (max-width: 480px) {
 	@import "bp1.less";
 }
