ahora el nav se queda fixed con el scroll en bpa1 y 2

--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -105,7 +105,7 @@ h2 {
 @media screen and (max-width: 992px) {
   #empezando {
     background: white;
-    padding: 20px 5px;
+    padding: 0 5px;
   }
   #empezando h1 {
     color: #6a747e;
@@ -113,7 +113,7 @@ h2 {
     font-size: 2.5em;
     letter-spacing: -4px;
     text-align: center;
-    padding: 0 0 20px 0;
+    padding: 20px 0 20px 0;
   }
   #empezando h2 {
     color: #535c64;
@@ -150,9 +150,6 @@ h2 {
     padding: 10px 0 3px 0;
     width: 60px;
   }
-  #menu {
-    padding: 20px 0 0 0;
-  }
   #mm0 {
     background: #6f8194;
     border: 1px solid #6f8194;
@@ -160,8 +157,27 @@ h2 {
     font-size: 18px;
     height: 38px;
     left: -4px;
+    opacity: .95;
     position: relative;
-    width: 105%;
+    width: 107%;
+  }
+  .fixed {
+    position: fixed;
+    top: -20px;
+    left: 0px;
+    width: 109%;
+    margin-bottom: 30px;
+  }
+  .menu {
+    padding: 20px 0 0 0;
+    overflow: hidden;
+    z-index: 5;
+  }
+  .terminal {
+    position: absolute;
+    top: 2px;
+    left: 45%;
+    font-size: .9em;
   }
   .ventana_ternminal {
     background: lightgrey;
@@ -171,12 +187,6 @@ h2 {
     position: absolute;
     top: -20px;
     width: 100%;
-  }
-  .terminal {
-    position: absolute;
-    top: 2px;
-    left: 45%;
-    font-size: .9em;
   }
 }
 @media screen and (max-width: 480px) {
