--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -100,7 +100,91 @@ h2 {
   color: white;
 }
 @media screen and (min-width: 992px) {
-  
+  article {
+    border-bottom: 1px solid #c6cfd3;
+    padding: 0 0 40px 0;
+  }
+  article h1 {
+    color: #6a747e;
+    font-family: 'Quicksand', cursive;
+    font-size: 2.5em;
+    letter-spacing: -4px;
+    text-align: center;
+    padding: 50px 0;
+  }
+  article h2 {
+    color: #535c64;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.4em;
+    padding: 0 0 7px 0;
+  }
+  article p {
+    color: #6f8194;
+    font-size: 1em;
+    padding: 0 0 0 10px;
+  }
+  article pre {
+    background: rgba(0, 0, 0, 0.65);
+    margin: 45px 45px 25px 45px;
+    position: relative;
+  }
+  article pre span {
+    color: #99bb67;
+    position: absolute;
+    top: 18px;
+    left: 10px;
+  }
+  header {
+    width: 25%;
+    float: left;
+  }
+  section#home {
+    background: white;
+    margin: 10px 5px 10px 25%;
+    max-width: 768px;
+    border-radius: 5px;
+    border: 1px solid #c6cfd3;
+    padding: 0 30px 30px 30px;
+  }
+  nav.menu {
+    padding: 30px 0 0 35px;
+  }
+  nav.menu a {
+    color: #585858;
+    font-size: .9em;
+  }
+  #logo {
+    text-align: center;
+  }
+  #logo h1 {
+    font-size: 3.6em;
+  }
+  #logo h2 {
+    font-size: 1.2em;
+    line-height: 25px;
+  }
+  #logo img {
+    display: block;
+    margin: 0 auto;
+    height: auto;
+    padding: 10px 0 3px 0;
+    width: 80px;
+  }
+  .terminal {
+    position: absolute;
+    top: 2px;
+    left: 45%;
+    font-size: .9em;
+  }
+  .ventana_ternminal {
+    background: lightgrey;
+    border-radius: 4px 4px 0 0;
+    height: 23px;
+    left: 0px;
+    position: absolute;
+    top: -20px;
+    width: 100%;
+  }
 }
 @media screen and (max-width: 992px) {
   #empezando {
@@ -166,7 +250,6 @@ h2 {
     top: -20px;
     left: 0px;
     width: 109%;
-    margin-bottom: 30px;
   }
   .menu {
     padding: 20px 0 0 0;
