--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -9,6 +9,8 @@
 // Colores =========================================
 // Color fondo
 @colorfondo: rgb(237,241,243);
+// Color borde
+@colorborde: #c6cfd3;
 
 // Menu titulo
 @menutitulo: rgb(144,156,172);
