--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -1,38 +1,38 @@
 // Break point 2
 
-#empezando {
+article {
 	background: white;
 	padding: 0 5px;
-}
-#empezando h1 {
-	color: @tituloarticle;
-	font-family: @tituloarticulo;
-	font-size: 2.5em;
-	letter-spacing: -4px;
-	text-align: center;
-	padding: 20px 0 20px 0;
-}
-#empezando h2 {
-	color: @subtituloarticle;
-	font-family: @mainfont;
-	font-size: 1.4em;
-	padding: 0 0 7px 0;
-}
-#empezando p {
-	color: @colorprincipal;
-	font-size: 1em;
-	padding: 0 0 0 10px;
-}
-#empezando pre {
-	background: rgba(0,0,0,.65);
-	margin: 35px 0 10px 0;
-	position: relative;
-}
-#empezando pre span {
-	color: @textoterminal;
-	position: absolute;
-	top: 18px;
-	left: 10px;
+	 h1 {
+		color: @tituloarticle;
+		font-family: @tituloarticulo;
+		font-size: 2.5em;
+		letter-spacing: -4px;
+		text-align: center;
+		padding: 20px 0 20px 0;
+	}
+	h2 {
+		color: @subtituloarticle;
+		font-family: @mainfont;
+		font-size: 1.4em;
+		padding: 0 0 7px 0;
+	}
+	p {
+		color: @colorprincipal;
+		font-size: 1em;
+		padding: 0 0 0 10px;
+	}
+	pre {
+		background: rgba(0,0,0,.65);
+		margin: 35px 0 10px 0;
+		position: relative;
+	}
+	pre span {
+		color: @textoterminal;
+		position: absolute;
+		top: 18px;
+		left: 10px;
+	}
 }
 #logo {
 	text-align: center;
