--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -138,16 +138,24 @@ h2 {
     width: 25%;
     float: left;
   }
+  section#contenedor {
+    max-width: 1024px;
+  }
   section#home {
     background: white;
-    margin: 10px 5px 10px 25%;
-    max-width: 768px;
+    margin: 10px 10px 10px 25%;
+    max-width: 800px;
     border-radius: 5px;
     border: 1px solid #c6cfd3;
     padding: 0 30px 30px 30px;
   }
   nav.menu {
-    padding: 30px 0 0 35px;
+    margin: 200px 0 0 25px;
+    position: fixed;
+  }
+  nav.menu a {
+    color: #585858;
+    font-size: .9em;
   }
   nav.menu a {
     color: #585858;
@@ -155,6 +163,8 @@ h2 {
   }
   #logo {
     text-align: center;
+    position: fixed;
+    margin: 0 0 0 25px;
   }
   #logo h1 {
     font-size: 3.6em;
