Totalmente estilado el artículo en vista escritorio

--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -21,6 +21,8 @@
 @tituloarticle: rgb(106,116,126);
 // Subtitulo article
 @subtituloarticle: rgb(83,92,100);
+// Subtitulo article
+@subtituloarticle2: rgba(0,0,0,.75);
 // Texto article
 @colorprincipal: rgb(111,129,148);
 
