--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -101,8 +101,7 @@ h2 {
 }
 @media screen and (min-width: 992px) {
   article {
-    border-bottom: 1px solid #c6cfd3;
-    padding: 0 0 40px 0;
+    padding: 0 0 20px 0;
   }
   article h1 {
     color: #6a747e;
@@ -110,41 +109,44 @@ h2 {
     font-size: 2.5em;
     letter-spacing: -4px;
     text-align: center;
-    padding: 50px 0;
+    padding: 52px 0 25px 0;
   }
   article h2 {
+    border-bottom: 1px solid #c6cfd3;
     color: #535c64;
     font-family: 'Raleway', sans-serif;
     font-size: 1.4em;
-    padding: 0 0 7px 0;
+    margin-bottom: 5px;
+    padding: 30px 0 10px 0;
+  }
+  article h2 span {
+    color: rgba(0, 0, 0, 0.75);
+    font-weight: bold;
   }
   article p {
     color: #6f8194;
     font-size: 1em;
-    padding: 0 0 0 10px;
+    margin-bottom: 15px;
+    line-height: 1.6;
   }
-  article pre {
-    background: rgba(0, 0, 0, 0.65);
-    margin: 45px 45px 25px 45px;
-    position: relative;
+  article ul {
+    padding: 10px 0 20px 20px;
+    line-height: 2.2em;
   }
-  article pre span {
-    color: #99bb67;
-    position: absolute;
-    top: 18px;
-    left: 10px;
+  article ul li {
+    list-style-type: circle;
   }
   header {
     width: 25%;
     float: left;
   }
   section#contenedor {
-    max-width: 1024px;
+    max-width: 1124px;
   }
   section#home {
     background: white;
     margin: 10px 10px 10px 25%;
-    max-width: 800px;
+    max-width: 1000px;
     border-radius: 5px;
     border: 1px solid #c6cfd3;
     padding: 0 30px 30px 30px;
@@ -180,20 +182,63 @@ h2 {
     padding: 10px 0 3px 0;
     width: 80px;
   }
-  .terminal {
+  .boton_google {
+    display: inline-block;
     position: absolute;
-    top: 2px;
-    left: 45%;
+    left: 5%;
+    top: 35%;
+  }
+  .boton_twitter {
+    display: inline-block;
+    position: absolute;
+    left: 20%;
+    top: 35%;
+  }
+  .nota_terminal {
+    margin: -25px 0 30px 60px;
+    font-size: .95em;
+  }
+  .social {
+    background: rgba(237, 241, 243, 0.5);
+    border-top: 1px solid #c6cfd3;
+    margin-top: 40px;
+    padding: 35px;
+    position: relative;
+  }
+  .terminal {
+    background: rgba(0, 0, 0, 0.65);
+    border-radius: 0 0 4px 4px;
+    -webkit-box-shadow: 0px 1px 2px rgba(111, 129, 148, 0.7);
+    margin: 35px 35px 70px 35px;
+    position: relative;
+  }
+  .terminal #maquina pre {
+    color: #99bb67;
+    line-height: 1.5;
+    padding: 35px 15px 0 20px;
+  }
+  .barra {
+    background: lightgrey;
+    border-radius: 6px 6px 0 0;
+    position: absolute;
+    width: 100%;
+    top: -10px;
+  }
+  .barra #barra {
+    font-size: .8em;
+    line-height: 2;
+    text-align: center;
+  }
+  .nota {
+    position: relative;
+    bottom: -35px;
+    color: grey;
+    left: 10px;
     font-size: .9em;
   }
-  .ventana_ternminal {
-    background: lightgrey;
-    border-radius: 4px 4px 0 0;
-    height: 23px;
-    left: 0px;
-    position: absolute;
-    top: -20px;
-    width: 100%;
+  .nota span {
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.8);
   }
 }
 @media screen and (max-width: 992px) {
@@ -207,7 +252,7 @@ h2 {
     font-size: 2.5em;
     letter-spacing: -4px;
     text-align: center;
-    padding: 20px 0 20px 0;
+    padding: 35px 0;
   }
   article h2 {
     color: #535c64;
@@ -220,16 +265,9 @@ h2 {
     font-size: 1em;
     padding: 0 0 0 10px;
   }
-  article pre {
-    background: rgba(0, 0, 0, 0.65);
-    margin: 35px 0 10px 0;
-    position: relative;
-  }
-  article pre span {
-    color: #99bb67;
-    position: absolute;
-    top: 18px;
-    left: 10px;
+  p {
+    line-height: 1.5;
+    margin-bottom: 5px;
   }
   #logo {
     text-align: center;
@@ -267,19 +305,58 @@ h2 {
     z-index: 5;
   }
   .terminal {
+    background: rgba(0, 0, 0, 0.65);
+    border-radius: 0 0 4px 4px;
+    -webkit-box-shadow: 0px 1px 2px rgba(111, 129, 148, 0.7);
+    margin: 35px 35px 70px 35px;
+    position: relative;
+  }
+  .terminal #maquina pre {
+    color: #99bb67;
+    line-height: 1.5;
+    padding: 35px 15px 0 20px;
+  }
+  .barra {
+    background: lightgrey;
+    border-radius: 6px 6px 0 0;
     position: absolute;
-    top: 2px;
-    left: 45%;
+    width: 100%;
+    top: -10px;
+  }
+  .barra #barra {
+    font-size: .8em;
+    line-height: 2;
+    text-align: center;
+  }
+  .nota {
+    position: relative;
+    bottom: -35px;
+    color: grey;
+    left: 10px;
     font-size: .9em;
   }
-  .ventana_ternminal {
-    background: lightgrey;
-    border-radius: 4px 4px 0 0;
-    height: 23px;
-    left: 0px;
+  .nota span {
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.8);
+  }
+  .boton_google {
+    display: inline-block;
     position: absolute;
-    top: -20px;
-    width: 100%;
+    left: 5%;
+    top: 35%;
+  }
+  .boton_twitter {
+    display: inline-block;
+    position: absolute;
+    left: 20%;
+    top: 35%;
+  }
+  .social {
+    background: rgba(237, 241, 243, 0.5);
+    border-top: 1px solid #c6cfd3;
+    margin-top: 30px;
+    padding: 35px;
+    position: relative;
   }
 }
 @media screen and (max-width: 480px) {
@@ -288,5 +365,13 @@ h2 {
     top: 2px;
     left: 38%;
     font-size: .9em;
+  }
+  .boton_google {
+    left: 10%;
+    top: 35%;
+  }
+  .boton_twitter {
+    left: 35%;
+    top: 35%;
   }
 }
