--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -9,7 +9,7 @@ article {
 		font-size: 2.5em;
 		letter-spacing: -4px;
 		text-align: center;
-		padding: 20px 0 20px 0;
+		padding: 35px 0;
 	}
 	h2 {
 		color: @subtituloarticle;
@@ -22,17 +22,10 @@ article {
 		font-size: 1em;
 		padding: 0 0 0 10px;
 	}
-	pre {
-		background: rgba(0,0,0,.65);
-		margin: 35px 0 10px 0;
-		position: relative;
-	}
-	pre span {
-		color: @textoterminal;
-		position: absolute;
-		top: 18px;
-		left: 10px;
-	}
+}
+p {
+	line-height: 1.5;
+	margin-bottom: 5px;
 }
 #logo {
 	text-align: center;
@@ -70,17 +63,58 @@ article {
 	z-index: 5;
 }
 .terminal {
-	position: absolute;
-	top: 2px;
-	left: 45%;
-	font-size: .9em;
+	background: rgba(0,0,0,.65);
+	border-radius: 0 0 4px 4px;
+	-webkit-box-shadow: 0px 1px 2px rgba(111,129,148,.7);
+	margin: 35px 35px 70px 35px;
+	position: relative;
+	#maquina pre {
+		color: @textoterminal;
+		line-height: 1.5;
+		padding: 35px 15px 0 20px;
+	}
 }
-.ventana_ternminal {
+.barra {
 	background: lightgrey;
-	border-radius: 4px 4px 0 0;
-	height: 23px;
-	left: 0px;
+	border-radius: 6px 6px 0 0;
 	position: absolute;
-	top: -20px;
 	width: 100%;
+	top: -10px;
+	#barra {
+		font-size: .8em;
+		line-height: 2;
+		text-align: center;
+
+	}
+}
+.nota {
+	position: relative;
+	bottom: -35px;
+	color: grey;
+	left: 10px;
+	font-size: .9em;
+	span {
+		font-weight: bold;
+		color: rgba(0,0,0,.8);
+	}
+}
+.boton_google {
+	display: inline-block;
+	position: absolute;
+	left: 5%;
+	top: 35%;
+}
+.boton_twitter {
+	display: inline-block;
+	position: absolute;
+	left: 20%;
+	top: 35%;
+}
+.social {
+	background: rgba(237,241,243,.5);
+	border-top: 1px solid @colorborde;
+	// border-bottom: 1px solid @colorborde;
+	margin-top: 30px;
+	padding: 35px;
+	position: relative;
 }
