--- a/produccion/less/bp3.less
+++ b/produccion/less/bp3.less
@@ -1,37 +1,40 @@
 // Break point 3
 
 article {
-	border-bottom: 1px solid @colorborde;
-	padding: 0 0 40px 0;
+	padding: 0 0 20px 0;
 	 h1 {
 		color: @tituloarticle;
 		font-family: @tituloarticulo;
 		font-size: 2.5em;
 		letter-spacing: -4px;
 		text-align: center;
-		padding: 50px 0;
+		padding: 52px 0 25px 0;
 	}
 	h2 {
+		border-bottom: 1px solid @colorborde;
 		color: @subtituloarticle;
 		font-family: @mainfont;
 		font-size: 1.4em;
-		padding: 0 0 7px 0;
+		margin-bottom: 5px;
+		padding: 30px 0 10px 0;
+		span {
+			color: @subtituloarticle2;
+			font-weight: bold;
+		}
 	}
 	p {
 		color: @colorprincipal;
 		font-size: 1em;
-		padding: 0 0 0 10px;
+		margin-bottom: 15px;
+		line-height: 1.6;
 	}
-	pre {
-		background: rgba(0,0,0,.65);
-		margin: 45px 45px 25px 45px;
-		position: relative;
-	}
-	pre span {
-		color: @textoterminal;
-		position: absolute;
-		top: 18px;
-		left: 10px;
+
+	ul {
+		padding: 10px 0 20px 20px;
+		line-height: 2.2em;
+		li {
+			list-style-type: circle;
+		}
 	}
 }
 header {
@@ -39,12 +42,12 @@ header {
 	float: left;
 }
 section#contenedor {
-	max-width: 1024px;
+	max-width: 1124px;
 } 
 section#home {
 	background: white;
 	margin: 10px 10px 10px 25%;
-	max-width: 800px;
+	max-width: 1000px;
 	border-radius: 5px;
 	border: 1px solid @colorborde;
 	padding: 0 30px 30px 30px;
@@ -81,18 +84,62 @@ nav.menu a {
 	padding: 10px 0 3px 0;
 	width: 80px;
 }
-.terminal {
+.boton_google {
+	display: inline-block;
 	position: absolute;
-	top: 2px;
-	left: 45%;
-	font-size: .9em;
+	left: 5%;
+	top: 35%;
 }
-.ventana_ternminal {
-	background: lightgrey;
-	border-radius: 4px 4px 0 0;
-	height: 23px;
-	left: 0px;
+.boton_twitter {
+	display: inline-block;
 	position: absolute;
-	top: -20px;
+	left: 20%;
+	top: 35%;
+}
+.nota_terminal {
+	margin: -25px 0 30px 60px;
+	font-size: .95em;
+}
+.social {
+	background: rgba(237,241,243,.5);
+	border-top: 1px solid @colorborde;
+	margin-top: 40px;
+	padding: 35px;
+	position: relative;
+}
+.terminal {
+	background: rgba(0,0,0,.65);
+	border-radius: 0 0 4px 4px;
+	-webkit-box-shadow: 0px 1px 2px rgba(111,129,148,.7);
+	margin: 35px 35px 70px 35px;
+	position: relative;
+	#maquina pre {
+		color: @textoterminal;
+		line-height: 1.5;
+		padding: 35px 15px 0 20px;
+	}
+}
+.barra {
+	background: lightgrey;
+	border-radius: 6px 6px 0 0;
+	position: absolute;
 	width: 100%;
+	top: -10px;
+	#barra {
+		font-size: .8em;
+		line-height: 2;
+		text-align: center;
+
+	}
+}
+.nota {
+	position: relative;
+	bottom: -35px;
+	color: grey;
+	left: 10px;
+	font-size: .9em;
+	span {
+		font-weight: bold;
+		color: rgba(0,0,0,.8);
+	}
 }
