--- a/produccion/less/bp1.less
+++ b/produccion/less/bp1.less
@@ -1,16 +1,120 @@
 // Break point 1
 
+article {
+	background: white;
+	padding: 0 5px;
+	 h1 {
+		color: @tituloarticle;
+		font-family: @tituloarticulo;
+		font-size: 2.5em;
+		letter-spacing: -4px;
+		text-align: center;
+		padding: 35px 0;
+	}
+	h2 {
+		color: @subtituloarticle;
+		font-family: @mainfont;
+		font-size: 1.4em;
+		padding: 0 0 7px 0;
+	}
+	p {
+		color: @colorprincipal;
+		font-size: 1em;
+		padding: 0 0 0 10px;
+	}
+}
+p {
+	line-height: 1.5;
+	margin-bottom: 5px;
+}
+#logo {
+	text-align: center;
+}
+#logo h1 {
+	font-size: 3em;
+}
+#logo img {
+	display: block;
+	margin: 0 auto;
+	height: auto;
+	padding: 10px 0 3px 0;
+	width: 60px;
+}
+#mm0 {
+	background: @colorprincipal;
+	border: 1px solid @colorprincipal;
+	color: @colorfondo;
+	font-size: 18px;
+	height: 38px;
+	left: -4px;
+	opacity: .95;
+	position: relative;
+	width: 107%;
+}
+.fixed {
+    position: fixed;
+    top: -20px;
+    left: 0px;
+   	width: 109%;
+}
+.menu {
+	padding: 20px 0 0 0;
+	overflow: hidden;
+	z-index: 5;
+}
 .terminal {
+	background: rgba(0,0,0,.65);
+	border-radius: 0 0 4px 4px;
+	-webkit-box-shadow: 0px 1px 2px rgba(111,129,148,.7);
+	margin: 35px 35px 70px 35px;
+	position: relative;
+	#maquina pre {
+		color: @textoterminal;
+		line-height: 1.5;
+		padding: 35px 15px 0 20px;
+	}
+}
+.barra {
+	background: lightgrey;
+	border-radius: 6px 6px 0 0;
 	position: absolute;
-	top: 2px;
-	left: 38%;
+	width: 100%;
+	top: -10px;
+	#barra {
+		font-size: .8em;
+		line-height: 2;
+		text-align: center;
+
+	}
+}
+.nota {
+	position: relative;
+	bottom: -35px;
+	color: grey;
+	left: 10px;
 	font-size: .9em;
+	span {
+		font-weight: bold;
+		color: rgba(0,0,0,.8);
+	}
 }
 .boton_google {
-	left: 10%;
+	display: inline-block;
+	position: absolute;
+	left: 5%;
 	top: 35%;
 }
 .boton_twitter {
-	left: 35%;
+	display: inline-block;
+	position: absolute;
+	left: 20%;
 	top: 35%;
+}
+.social {
+	background: rgba(237,241,243,.5);
+	border-top: 1px solid @colorborde;
+	// border-bottom: 1px solid @colorborde;
+	margin-top: 30px;
+	padding: 35px;
+	position: relative;
 }
