--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -2,40 +2,41 @@
 
 section#contenedor {
 	header#header {
-		figure#logo {
-			text-align: center;
-			position: fixed;
-			margin: 0 0 0 25px;
-			h1 {
-			font-size: 3.6em;
+		max-width: 400px;
+		padding: 10px 30px 0 30px;
+		width: 25%;
+		position: fixed;
+		top: 0px;
+			figure#logo {
+				text-align: center;
+				margin: 0 0 20px 0;
+					h1 {
+					font-size: 3.6em;
+					}
+					h2 {
+					font-size: 1.2em;
+					line-height: 25px;
+					}
+					img {
+					margin: 0 auto;
+					height: auto;
+					padding: 10px 0 3px 0;
+					width: 80px;
+					}
+			nav.menu {
 			}
-			h2 {
-			font-size: 1.2em;
-			line-height: 25px;
-			}
-			img {
-			display: block;
-			margin: 0 auto;
-			height: auto;
-			padding: 10px 0 3px 0;
-			width: 80px;
-			}
-		nav.menu {
-			background: red;
-			width: 200px;
-			height: 100%;
-			position: fixed;
-		}
 }
 	}
 	section#home {
-		margin: 0 auto;
+		float: left;
 		max-width: 1000px;
+		margin-left: 25%;
+		width: 75%;
 		article {
 			background: white;
 			border-radius: 7px;
 			border: 1px solid @colorborde;
-			margin: 35px 0 35px 0;
+			margin: 35px 10px 35px 0;
 			padding: 0 30px 30px 30px;
 			 h1 {
 				color: @tituloarticle;
