--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -119,8 +119,9 @@ h2 {
     line-height: 25px;
   }
   section#contenedor header#header figure#logo img {
-    margin: 0 auto;
+    margin: 20px auto 20px auto;
     height: auto;
+    display: block;
     padding: 10px 0 3px 0;
     width: 80px;
   }
