--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -18,8 +18,9 @@ section#contenedor {
 					line-height: 25px;
 					}
 					img {
-					margin: 0 auto;
+					margin: 20px auto 20px auto;
 					height: auto;
+					display: block;
 					padding: 10px 0 3px 0;
 					width: 80px;
 					}
