--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -14,8 +14,10 @@ section#contenedor {
 					font-size: 3.6em;
 					}
 					h2 {
+					border-top: 1px solid @colorborde;
 					font-size: 1.2em;
 					line-height: 25px;
+					margin-top: 5px;
 					}
 					img {
 					margin: 20px auto 20px auto;
