--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -106,6 +106,8 @@ h2 {
     width: 25%;
     position: fixed;
     top: 0px;
+    left: 0px;
+    bottom: 0px;
   }
   section#contenedor header#header figure#logo {
     text-align: center;
@@ -126,6 +128,9 @@ h2 {
     display: block;
     padding: 10px 0 3px 0;
     width: 80px;
+  }
+  section#contenedor header#header figure#logo nav.menu {
+    position: relative;
   }
   section#contenedor section#home {
     float: left;
@@ -173,6 +178,17 @@ h2 {
   }
   section#contenedor section#home article ul li {
     list-style-type: circle;
+  }
+  #mobileMenu {
+    overflow-y: scroll;
+    width: 85%;
+    height: 50%;
+    position: absolute;
+  }
+  #mobileMenu ul,
+  #mobileMenu li {
+    font-size: .98em;
+    color: #585858;
   }
   .barra {
     background: lightgrey;
