--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -11,7 +11,9 @@ section#contenedor {
 		bottom: 0px;
 			figure#logo {
 				text-align: center;
-				margin: 0 0 20px 0;
+				margin: 0 0 30px 0;
+				position: relative;
+				top: -7px;
 					h1 {
 					font-size: 3.6em;
 					}
@@ -42,7 +44,7 @@ section#contenedor {
 			background: white;
 			border-radius: 7px;
 			border: 1px solid @colorborde;
-			margin: 35px 10px 35px 0;
+			margin: 20px 10px 35px 0;
 			padding: 0 30px 30px 30px;
 			 h1 {
 				color: @tituloarticle;
@@ -84,14 +86,27 @@ section#contenedor {
 } 
 #mobileMenu {
 	overflow-y: scroll;
-	width: 85%;
-	height: 50%;
+	height: 58%;
 	position: absolute;
-		ul, li {
-			font-size: .98em;
-			color: @menutexto;
+	left: 15px;
+	right: 15px;
+		li {
+			border-bottom: 1px solid @colorborde;
+			font-weight: bold;
+			line-height: 2.2;
+			padding: 5px 0;
+				a {
+					color: @menutexto;
+					font-size: .95em;
+					font-weight: normal;
+				}
+				a:hover {
+					text-decoration: none;
+				}
 		}
-	
+}
+#mobileMenu li:hover {
+	background: rgba(0,0,0,.03);
 }
 .barra {
 	background: lightgrey;
