--- a/produccion/less/variables.less
+++ b/produccion/less/variables.less
@@ -15,7 +15,7 @@
 // Menu titulo
 @menutitulo: rgb(144,156,172);
 // Menu texto
-@menutexto: rgb(88,88,88);
+@menutexto: #6f8194;
 
 // Titulo article
 @tituloarticle: rgb(106,116,126);
