--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -24,11 +24,11 @@ section#contenedor {
 					margin-top: 5px;
 					}
 					img {
-					margin: 20px auto 20px auto;
+					margin: 20px auto 15px auto;
 					height: auto;
 					display: block;
 					padding: 10px 0 3px 0;
-					width: 80px;
+					width: 120px;
 					}
 			nav.menu {
 				position: relative;
@@ -92,9 +92,8 @@ section#contenedor {
 	right: 15px;
 		li {
 			border-bottom: 1px solid @colorborde;
-			font-weight: bold;
-			line-height: 2.2;
-			padding: 5px 0;
+			line-height: 1.1;
+			padding: 13px 0 13px 10px;
 				a {
 					color: @menutexto;
 					font-size: .95em;
@@ -107,6 +106,14 @@ section#contenedor {
 }
 #mobileMenu li:hover {
 	background: rgba(0,0,0,.03);
+}
+#mobileMenu li#titulo:hover {
+	background: @menutitulo;
+	color: @colorfondo;
+}
+#titulo {
+	background: @menutitulo;
+	color: @colorfondo;
 }
 .barra {
 	background: lightgrey;
