--- a/produccion/less/layout.less
+++ b/produccion/less/layout.less
@@ -23,3 +23,7 @@ body {
 @media screen and (max-width: 992px) {
 	@import "bp1.less";
 }
+
+@media screen and (max-width: 480px) {
+	@import "bp0.less";
+}
