Añadido Disqus para los comentarios

--- a/produccion/less/bp2.less
+++ b/produccion/less/bp2.less
@@ -106,6 +106,8 @@ section#contenedor {
 }
 #mobileMenu li:hover {
 	background: rgba(0,0,0,.03);
+	-webkit-transition: all .2s ease;
+	transition: all .2s ease;
 }
 #mobileMenu li#titulo:hover {
 	background: @menutitulo;
@@ -139,6 +141,9 @@ section#contenedor {
 	position: absolute;
 	left: 20%;
 	top: 35%;
+}
+.comentario{
+	margin-top: 10px;
 }
 .nota {
 	position: relative;
