--- a/produccion/css/estilos.css
+++ b/produccion/css/estilos.css
@@ -203,6 +203,8 @@ h2 {
   }
   #mobileMenu li:hover {
     background: rgba(0, 0, 0, 0.03);
+    -webkit-transition: all .2s ease;
+    transition: all .2s ease;
   }
   #mobileMenu li#titulo:hover {
     background: #909cac;
@@ -235,6 +237,9 @@ h2 {
     position: absolute;
     left: 20%;
     top: 35%;
+  }
+  .comentario {
+    margin-top: 10px;
   }
   .nota {
     position: relative;
